# Dental-AI-Treament-Planner

./: .env.example  .gitignore  LICENSE  README.md  mcp_config.example.json  pyproject.toml
src/: cli.py
src/api/: demo.py  main.py
src/mcp_server/: server.py
src/rag/: dental_rag.py
src/vision/: dental_analyzer.py
